# tiago_pro_robot-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
config/: current_limit_controllers.yaml  forward_controller_vel.yaml  joint_torque_state_broadcaster.yaml  show.rviz
config/hardware/: tiago_pro_hardware.yaml
config/local_joint_control/actuator_parameters/: arm_left_2_joint.yaml  arm_right_4_joint.yaml  arm_right_5_joint.yaml  arm_right_7_joint.yaml  inner_finger_1_left_joint.yaml
config/motion_planner/: motion_planner.yaml.em  motion_planner_allegro-hand_no-arm_teleop-arms.yaml  motion_planner_custom_pal-pro-gripper_teleop-arms.yaml  motion_planner_no-arm_allegro-hand.yaml  motion_planner_no-arm_no-arm_teleop-arms.yaml  motion_planner_no-arm_pal-pro-gripper_teleop-arms.yaml  motion_planner_no-ee_custom_teleop-arms.yaml  motion_planner_pal-pro-gripper_allegro-hand_teleop-arms.yaml  motion_planner_pal-pro-gripper_no-arm_teleop-arms.yaml  motion_planner_pal-pro-gripper_pal-pro-gripper.yaml
config/motions/: tiago_pro_motions_allegro-hand_left.yaml  tiago_pro_motions_general_spherical-wrist.yaml  tiago_pro_motions_general_straight-wrist.yaml  tiago_pro_motions_no_arms.yaml  tiago_pro_motions_pal-pro-gripper_right.yaml  tiago_pro_motions_teleop_arms.yaml
config/tsid/: cartesian_vel_controller_ee_frame.yaml  cartesian_vel_controller_ee_frame_sim.yaml  cartesian_vel_controller_robot_frame.yaml  torso_joint_space_controller.yaml
config/tsid/gains/: cartesian_space_controller_ee_frame_sim.yaml  cartesian_space_controller_robot_frame_sim.yaml  cartesian_vel_controller_robot_frame.yaml  joint_space_controller.yaml  joint_space_controller_sim.yaml  sin_joint_controller_sim.yaml  torso_joint_space_controller_sim.yaml  torso_joint_space_vel_controller_sim.yaml
debian/: changelog  control  copyright  gbp.conf  rules
launch/: default_controllers.launch.py  joystick_teleop.launch.py  robot_state_publisher.launch.py  tiago_pro_bringup.launch.py  tiago_pro_play_motion2.launch.py  tsid_default_controllers.launch.py
meshes/pilot_station/: teleop_handle.stl
module/: 20_default_controllers.yaml  20_play_motion2.yaml  20_robot_state_publisher.yaml  joystick.yaml  tsid_default_controllers.yaml  twist_mux.yaml
ros2_control/: ros2_control.urdf.xacro
rpm/: ros-humble-tiago-pro-bringup.spec  ros-humble-tiago-pro-description.spec  ros-humble-tiago-pro-robot.spec  template.spec
scripts/: regen_em_file.py
test/: test_xacro.py
tiago_pro_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_pro_bringup/config/joy_teleop/: joy_teleop.yaml
tiago_pro_bringup/config/motion_planner/: motion_planner.yaml.em  motion_planner_allegro-hand_no-arm.yaml  motion_planner_custom_custom.yaml  motion_planner_no-arm_custom_teleop-arms.yaml  motion_planner_no-arm_pal-pro-gripper.yaml  motion_planner_no-ee_pal-pro-gripper.yaml  motion_planner_pal-pro-gripper_no-arm.yaml  motion_planner_pal-pro-gripper_no-ee.yaml  motion_planner_pal-pro-gripper_pal-pro-gripper_teleop-arms.yaml
tiago_pro_bringup/config/motions/: tiago_pro_motions_general_arm_left.yaml  tiago_pro_motions_general_arm_right.yaml  tiago_pro_motions_pal-pro-gripper_left.yaml
tiago_pro_bringup/config/twist_mux/: joystick.yaml
tiago_pro_bringup/launch/: gripper_grasper.launch.py  tiago_pro_bringup.launch.py  twist_mux.launch.py
tiago_pro_bringup/module/: 20_play_motion2.yaml  gripper_grasper.yaml
tiago_pro_controller_configuration/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_pro_controller_configuration/config/: torso_controller.yaml
tiago_pro_controller_configuration/config/local_joint_control/actuator_parameters/: arm_left_1_joint.yaml  arm_left_3_joint.yaml  arm_left_4_joint.yaml  arm_left_5_joint.yaml  arm_left_6_joint.yaml  arm_left_7_joint.yaml  arm_right_1_joint.yaml  arm_right_2_joint.yaml  arm_right_3_joint.yaml  arm_right_6_joint.yaml  gripper_left_joint.yaml  gripper_right_joint.yaml  inner_finger_1_right_joint.yaml  torso_lift_joint.yaml
tiago_pro_controller_configuration/config/local_joint_control/direct_position_control/: arm_right_4_joint_params.yaml
tiago_pro_controller_configuration/config/tsid/: cartesian_space_controller_ee_frame.yaml  cartesian_space_controller_robot_frame.yaml  cartesian_vel_controller_robot_frame_sim.yaml  joint_space_controller.yaml  joint_space_controller_vel.yaml  sin_joint_controller.yaml  torso_joint_space_vel_controller.yaml
tiago_pro_controller_configuration/config/tsid/gains/: cartesian_space_controller_ee_frame.yaml  cartesian_space_controller_ee_frame_sim.yaml  cartesian_space_controller_robot_frame.yaml  cartesian_vel_controller_ee_frame.yaml  cartesian_vel_controller_ee_frame_sim.yaml  cartesian_vel_controller_robot_frame_sim.yaml  joint_space_controller_vel.yaml  joint_space_controller_vel_sim.yaml  sin_joint_controller.yaml  torso_joint_space_controller.yaml  torso_joint_space_vel_controller.yaml
tiago_pro_controller_configuration/launch/: default_controllers.launch.py  tsid_default_controllers.launch.py  velocity_controllers.launch.py
tiago_pro_controller_configuration/module/: 20_default_controllers.yaml
tiago_pro_description/: CHANGELOG.rst  launch_arguments.py  tiago_pro_launch_utils.py
tiago_pro_description/config/: show_front.rviz  tiago_pro_configuration.yaml
tiago_pro_description/launch/: show.launch.py
tiago_pro_description/robots/: tiago_pro.urdf.xacro
tiago_pro_description/ros2_control/: ros2_control.urdf.xacro
tiago_pro_description/test/: test_description.launch.py  test_xacro.py
tiago_pro_description/tiago_pro_description/: tiago_pro_launch_utils.py
tiago_pro_description/urdf/: arm.mounting.xacro
tiago_pro_description/urdf/torso/: torso.urdf.xacro
tiago_pro_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
urdf/calibration/: calibration_offset.urdf.xacro  calibration_offset.urdf.xacro.j2
urdf/pilot_station/: basestation.urdf.xacro  teleop_handle.urdf.xacro
urdf/torso/: torso.ros2_control.xacro  torso.transmission.urdf.xacro
(+2 files in other folders)
